material icon bug not visible fixed at cards

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -627,15 +627,14 @@ h5 {
     display: flex;
     flex-direction: column;
 }
-.material-icons {
+.phone-icons {
     font-size: 24px;
     margin-right: 10px;
-    color: #fff;
-    z-index: 3;
-    border-radius: 100%;     /* Makes the list items inline */
+    z-index: 3; 
 }
-.material-icons mat-icon{
+.phone-icons .icon{
     border: 1px solid #fff;
+    border-radius: 100%;  
     width: 40px;
     height: 40px;
     display: flex;
